# FreibuJobs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cross-platform  GHA_FUTURE_PLANS.md  Makefile  PROJECT_STRUCTURE.md  README.md  check_bot_status.py  debug_search.py  deploy.bat  linkedin_search_debug.html  linkedin_test.py  main.py  main_clean.py  minimal_test.py  pyproject.toml  quick-deploy.bat  requirements.txt  setup.py  simple_test.py  test_bot.py  test_cross_platform.py  test_extraction.py  test_linkedin_local.py
.azure/: AZURE_DEPLOYMENT.md  QUICKSTART.md  azure-resources.json  azure.env  azure.env.template  container-app.yaml  deploy.bat  deploy.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: azure-deploy.yml  ci-cd.yml  deploy.yml  development.yml  release.yml  test.yml
config/: .env.example  .pre-commit-config.yaml  pytest.ini  setup.cfg
deploy/: .dockerignore  Dockerfile  docker-compose.yml
docs/: AZURE_READY.md  DEPLOYMENT.md  FINAL_STRUCTURE.md  WORKFLOW_GUIDE.md
logs/: README.md
monitoring/: prometheus.yml
scripts/: setup.py  test_basic.py
src/: __init__.py
src/bot/: __init__.py  handlers.py  main.py  messages.py
src/health/: __init__.py  health_check.py
src/scraper/: __init__.py  linkedin.py  linkedin_enhanced.py  linkedin_fixed.py
src/utils/: __init__.py  config.py  logging.py
tests/: test_bot.py
